# nut8nt-host

./: README.md
NUT8_File2Channels/: main.cpp
NUT8_TCP2Files/: NUT8_TCP2Files.pro  main.cpp  tcpserver.h
SOFTWARE/: ConfigSet_all_GPS_L1_patched_ldvs_noadc.hex  Init_NUT8.sh  NUT8NT.cfg  UDP_rec.grc  gffgf.hex
SOFTWARE/AD9361_test/: CMakeLists.txt  Makefile  ads5292.c  ads5292.h  gpio_functions.c  gpio_functions.h  gpio_pins.h  main.c  max2871.c  max2871.h  nt1065.c  nt1065.h  spi_functions.c  spi_functions.h
SOFTWARE/AD9361_test/ad9361_no_os_driver/: ad9361.c  ad9361_api.c  adc_core.c  dac_core.c  parameters.h  platform.c  platform.h
SOFTWARE/AD9361_test/ad9361_wrapper/: devtree.dts  platform_wrap.c  sleep.h  xil_cache.h  xil_io.c  xil_io.h  xil_printf.h  xparameters.h
SOFTWARE/GNSS_SDR_Class-ComplexAndCNo/: acquisition.m  acquisition2.m  acquisition3.m  calculatePseudoranges.m  diff_norm.m  init.m  init2.m  init3.m  init4.m  initSettings.asv  initSettings.m  initSettings.m~  my_error.m  ph_rot.m  ph_rot2.m  plotAcquisition2.m  plotNavigation2.m  plotTracking.m  plotTracking2.m  postNavigation.m  postProcessing.m  postProcessing2.m  postProcessing3.m  probeData.m  probeData2.m  res.mat  res2.mat  tracking.m  trackingResults.mat
SOFTWARE/GNSS_SDR_Class-ComplexAndCNo/include/: preRun2.m  showChannelStatus.m
SOFTWARE/NUT8_AD_Test/: CMakeLists.txt  ad9361_api.c  ad9361_conv.c  main.c
SOFTWARE/NUT8_DMA2TCP/: CMakeLists.txt  main.c
SOFTWARE/NUT8_DMA2TCP_5MHz/: CMakeLists.txt  main.c
SOFTWARE/NUT8_DMA2UDP/: CMakeLists.txt  GNU_UDP_client.cpp  GNU_UDP_client.h  dma-proxy.h  gpio.cpp  main.cpp
SOFTWARE/NUT8_File2Channels/: main.cpp
SOFTWARE/NUT8_TCP2Files/: NUT8_TCP2Files.pro  main.cpp  tcpserver.cpp
SOFTWARE/nut8_init/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  ad9361cfg.h  ad9361class.cpp  ad9361class.h  adc_core.h  ads5292.cpp  ads5292.h  axi_dma.cpp  axi_dma.h  common.h  dac_core.h  defines.h  gpio.h  logger.cpp  logger.h  main.cpp  max2871.cpp  max2871.h  max5717.cpp  max5717.h  nt1065.cpp  nt1065.h  platform.c  spi_master.cpp  spi_master_ivan.cpp  spi_master_ivan.h  test.cfg
SOFTWARE/nut8_init/ad9361_no_os_driver/: CMakeLists.txt  ad9361.c  ad9361_api.c  ad9361_api.h  adc_core.c  config.h  dac_core.c  platform.h
SOFTWARE/nut8_init/ad9361_no_os_driver/b/: CMakeCache.txt  Makefile  cmake_install.cmake
SOFTWARE/nut8_init/b/: CMakeCache.txt  Makefile  cmake_install.cmake
SOFTWARE/nut8_init/b/ad9361_no_os_driver/: Makefile  cmake_install.cmake
Soft/: CMakeLists.txt
Soft/AXIDMA/: axidma.cpp  axidma.h  config.h  dma-proxy.h  dma-proxy2.h
Soft/Control/: ConfigReader.cpp  ConfigReader.h  ads5292.cpp  ads5292.h  defines.h  gpio.cpp  gpio.h  max2871.cpp  max2871.h  max5717.cpp  max5717.h  nt1065.cpp  nt1065.h  spi_master.h  spi_master_ivan.cpp  spi_master_ivan.h
Soft/NUT8_DMA2TCP/: NUT8_DMA2TCP.cpp
Soft/NUT8_DMA2UDP/: NUT8_DMA2UDP.cpp
Soft/NUT8_Init/: main.cpp
nut8_petalinux_2018.3_amungo/ext/kernel-source/: oe-logs  oe-workdir
nut8_petalinux_2018.3_amungo/ext/kernel-source/drivers/dma/xilinx/: xilinx_dma.c
nut8_petalinux_2018.3_amungo/project-spec/configs/: config  rootfs_config
nut8_petalinux_2018.3_amungo/project-spec/hw-description/: psu_init.c  psu_init.h  psu_init.html  psu_init.tcl  psu_init_gpl.c  psu_init_gpl.h  system.hdf
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-bsp/device-tree/files/: system-user.dtsi
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-core/images/: petalinux-image-full.bbappend
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-kernel/linux/: linux-xlnx_%.bbappend
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-kernel/linux/linux-xlnx/: user_2019-10-09-12-21-00.cfg  user_2020-01-23-21-03-00.cfg  user_2020-03-05-19-17-00.cfg  user_2020-03-05-19-52-00.cfg  user_2020-03-12-18-17-00.cfg  user_2020-03-12-20-38-00.cfg  user_2020-03-12-20-51-00.cfg  user_2020-03-13-13-50-00.cfg  user_2020-03-13-16-04-00.cfg  user_2020-03-17-16-18-00.cfg  user_2020-03-17-17-01-00.cfg  user_2020-03-17-17-38-00.cfg  user_2020-03-23-21-20-00.cfg  user_2020-09-22-12-35-00.cfg
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/axidmatest/: README  axidmatest.bb
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/axidmatest/files/: Makefile  axidmatest.c
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/dma-proxy/: dma-proxy.bb
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/dma-proxy/files/: dma-proxy.c
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/dwc3/: README  dwc3.bb
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/dwc3/files/: Makefile  dwc3.c  g_ffs_def.c
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/ntdma/: README  ntdma.bb
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/ntdma/files/: Makefile  ntdma.c  ntdma.h  ntdma_ioctl.h
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/udmabuf/: udmabuf.bb
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/udmabuf/files/: Makefile  udmabuf.c
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/xaxidma/: README  xaxidma.bb
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/xaxidma/files/: Makefile  xaxidma.h  xaxidma_bd.h  xaxidma_bdring.c  xaxidma_g.c  xdebug.h  (+5 more)
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/xilinx-axidma/: xilinx-axidma.bb
nut8_petalinux_2018.3_amungo/project-spec/meta-user/recipes-modules/xilinxdma/: README  xilinxdma.bb
plx-progect/.petalinux/: metadata
plx-progect/ext/linux-xlnx/: oe-logs  oe-workdir
plx-progect/project-spec/configs/: config  rootfs_config
plx-progect/project-spec/hw-description/: psu_init.c  psu_init.h  psu_init.html  psu_init.tcl  psu_init_gpl.c  psu_init_gpl.h  system.xsa
plx-progect/project-spec/meta-user/conf/: user-rootfsconfig
plx-progect/project-spec/meta-user/recipes-modules/dma-proxy2/: README  dma-proxy2.bb
(+11 files in other folders)
